--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,13 @@ html {
 
 h2 {
   font-family: 'Montserrat', sans-serif;
-  color: #1D3E59;
+  color: #1d3e59;
   text-align: center;
 }
 
 section p {
   font-family: 'Montserrat', sans-serif;
-  color: #1D3E59;
+  color: #1d3e59;
   text-align: center;
 }
 
@@ -33,13 +33,13 @@ nav a {
 }
 
 .orange-btn {
-  border: 3px solid #C96B34;
+  border: 3px solid #c96b34;
   color: #fff;
 }
 
 .orange-blue-btn {
-  border: 3px solid #C96B34;
-  color: #1D3E59;
+  border: 3px solid #c96b34;
+  color: #1d3e59;
 }
 
 .desktop-banner {
@@ -49,6 +49,10 @@ nav a {
 .content-duo h2,
 .content-duo p {
   color: #fff;
+}
+
+footer {
+  background-color: #1d3e59
 }
 
 
