--- a/css/modules.css
+++ b/css/modules.css
@@ -1032,9 +1032,8 @@ button,
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background-color: #333;
   border-radius: 4px;
-  border: 3px solid #333;
+  border: 3px solid #c96b34;
   color: #fff;
   font: inherit;
   text-decoration: none;
@@ -1052,8 +1051,8 @@ button:focus,
 button:hover,
 .btn:focus,
 .btn:hover {
-  background-color: #000;
-  border-color: #000;
+  background-color: #c96b34;
+  border-color: #c96b34;
   color: #fff;
 }
 
