--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,16 @@ i:hover {
   border: 3px solid #c96b34;
 }
 
+label,
+input {
+  color: #1d3e59;
+  font-family: Montserrat, sans-serif;
+}
+
+.checkbox {
+  border: 3px solid #c96b34;
+}
+
 @media only screen and (min-width: 60em) {
 
   .mobile-banner {
