Add horizontal scrolling to tour page
Also changes logo to higher resolution image and sets a fixed width for columns

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,10 @@ input {
   border: 3px solid #c96b34;
 }
 
+.table-width {
+  width: 12em;
+}
+
 @media only screen and (min-width: 60em) {
 
   .mobile-banner {
